# dagster-demo

./: .gitignore  README.md  dagster_cloud.yaml  dbt_project.yml  profiles.yml  pyproject.toml
dagster_demo/: definitions.py
dagster_demo/assets/: sales_analytics.py
models/: customer_orders.sql  daily_revenue.sql  product_summary.sql  schema.yml
seeds/: raw_customers.csv  raw_sales_orders.csv
