[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "dagster-demo"
version = "0.0.1"
description = "A simple Dagster project for Cloud Serverless trial"
requires-python = ">=3.10"
dependencies = [
    "dagster>=1.9.0",
]

[tool.dagster]
module_name = "dagster_demo.definitions"
