[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "dagster-demo"
version = "0.0.1"
description = "Dagster + dbt demo project for Cloud Serverless trial"
requires-python = ">=3.10"
dependencies = [
    "dagster>=1.9.0",
    "dagster-dbt>=1.9.0",
]
